# beatmaker-playlist

./: .gitignore  Readme.md  api_key.py  lib.py  pp.ipynb  pp.py  pp.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/static/css/: main.css
app/templates/: index.html
beatmaker-playlist/: app.py  beatmaker_playlist.py  config.py  debug.py  genius.py  http_client.py  secret_keys.py  spotify.py  utils.py
beatmaker-playlist/templates/: create_playlist.html  homepage.html  logged_in.html  result.html
